force-app/main/default/objects/Asset/fields/cgcloud__Brand__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Brand__c</fullName>
    <label>Brand</label>
    <length>100</length>
    <type>Text</type>
</CustomField>