force-app/main/default/objects/Asset/fields/cgcloud__ERP_Asset_Number__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__ERP_Asset_Number__c</fullName>
    <description>Holds the asset number assigned by the ERP.</description>
    <inlineHelpText>Holds the asset number assigned by the ERP.</inlineHelpText>
    <label>ERP Asset Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>