force-app/main/default/objects/Asset/fields/cgcloud__Manufacturer_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Manufacturer_Serial_Number__c</fullName>
    <label>Manufacturer Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>