force-app/main/default/objects/Asset/fields/cgcloud__Note__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Note__c</fullName>
    <description>Text notes.</description>
    <label>Asset Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>