force-app/main/default/objects/Asset/fields/cgcloud__Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Ownership_Type__c</fullName>
    <description>Describes the ownership type of the asset.</description>
    <label>Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Leased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>