force-app/main/default/objects/Asset/fields/cgcloud__Production_Year__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Production_Year__c</fullName>
    <description>Holds the production year of the asset.</description>
    <label>Production Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>