force-app/main/default/objects/Asset/fields/cgcloud__Service_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Service_Phone_Number__c</fullName>
    <label>Service Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>