force-app/main/default/objects/Asset/fields/cgcloud__Tag_Number__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tag_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Auxiliary hidden field, fulfilled by WF field update, in order to avoid duplicate records in standard SerialNumber field in the same Sales Org</description>
    <label>Tag Number</label>
    <length>85</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>