force-app/main/default/objects/Asset/fields/cgcloud__Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_From__c</fullName>
    <description>First date of validity period of the customer asset assignment.</description>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>