force-app/main/default/objects/Asset/fields/cgcloud__Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_Thru__c</fullName>
    <description>Last date of validity period of the customer asset assignment.</description>
    <label>Valid Thru</label>
    <type>Date</type>
</CustomField>