force-app/main/default/objects/Asset/validationRules/cgcloud__Date_From_Thru_WithPOS.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Date_From_Thru_WithPOS</fullName>
    <active>true</active>
    <description>The Asset time frame must be within the POS time frame.</description>
    <errorConditionFormula>OR(cgcloud__Valid_From__c  &lt;  cgcloud__POS__r.cgcloud__Valid_From__c, cgcloud__Valid_Thru__c  &gt;  cgcloud__POS__r.cgcloud__Valid_Thru__c)</errorConditionFormula>
    <errorMessage>The Asset time frame must be within the POS time frame.</errorMessage>
</ValidationRule>