force-app/main/default/objects/Asset/validationRules/cgcloud__Mandatory_Entries.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Mandatory_Entries</fullName>
    <active>false</active>
    <description>The mandatory fields can&apos;t be empty.</description>
    <errorConditionFormula>OR( 
ISBLANK(cgcloud__Asset_Type__c),
ISBLANK(AccountId),
ISPICKVAL(cgcloud__Sales_Org__c,&quot;&quot;),
ISBLANK(cgcloud__Description_Language_1__c),
ISBLANK(cgcloud__Valid_From__c),
ISBLANK(cgcloud__Valid_Thru__c),
ISBLANK(Name) 
)</errorConditionFormula>
    <errorMessage>The mandatory fields can&apos;t be empty.</errorMessage>
</ValidationRule>