force-app/main/default/objects/Asset/validationRules/cgcloud__Prevent_Asset_Type_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Prevent_Asset_Type_Change</fullName>
    <active>true</active>
    <description>The Asset Type can&apos;t be edited after Asset creation.</description>
    <errorConditionFormula>ISCHANGED( cgcloud__Asset_Type__c )</errorConditionFormula>
    <errorDisplayField>cgcloud__Asset_Type__c</errorDisplayField>
    <errorMessage>The Asset Type can&apos;t be edited after Asset creation.</errorMessage>
</ValidationRule>